--- a/css/blocks/section-title.css
+++ b/css/blocks/section-title.css
@@ -11,5 +11,5 @@
   height: 28px;
   margin-left: 7px;
   vertical-align: middle;
-  background-image: url("/img/fire-icon.png");
+  background-image: url("../../img/fire-icon.png");
 }
